Enable Arrange shortcuts

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "SlideKeys",
-  "version": "0.3",
+  "version": "0.1",
   "description": "Adds powerful keyboard shortcuts to Google Slides",
   "permissions": [
     "storage"
@@ -21,9 +21,11 @@
     {
       "matches": [
         "https://docs.google.com/presentation/*",
+        "https://docs.google.com/spreadsheets/*",
         "https://docs.google.com/a*/presentation/*"
       ],
       "js": [
+        "content_scripts/utils.js",
         "content_scripts/keyboard_utils.js",
         "content_scripts/settings.js",
         "content_scripts/slide_actions.js",
@@ -31,8 +33,9 @@
         "content_scripts/commands.js",
         "help_dialog.js"
       ],
-      "run_at": "document_end",
-      "all_frames": false
+      // "all_frames": true,
+      // "match_about_blank": true
+      "run_at": "document_idle"
     }
   ],
   "web_accessible_resources": [
